Refacotr: Restructure project directories and  add Java services

--- a/PA_Backend/Dockerfile
+++ b/PA_Backend/Dockerfile
@@ -1,25 +1,22 @@
 # Dockerfile
 
 # 1. Use an official Python runtime as a parent image
-FROM python:3.12.9-slim
+FROM python:3.12-slim
 
 # 2. Set the working directory in the container
 WORKDIR /app
 
-# 3. Install Poetry
-RUN pip install poetry
+# 3. Copy the pyproject.toml and poetry.lock files
+COPY pyproject.toml ./
 
-# 4. Copy the pyproject.toml and poetry.lock files
-COPY pyproject.toml poetry.lock* ./
+# 4. Install Poetry and dependencies
+RUN pip install poetry && poetry install --no-root --only main --no-interaction --no-ansi
 
-# 5. Install dependencies
-RUN poetry install --no-root --only main --no-interaction --no-ansi
-
-# 6. Copy your application code into the container's '/app' directory
+# 5. Copy your application code into the container's '/app' directory
 COPY . .
 
-# 7. Make port 5000 available to the world outside this container
+# 6. Make port 5000 available to the world outside this container
 EXPOSE 5000
 
-# 8. Run main.py when the container launches
-CMD ["poetry", "run", "python", "main.py"]
+# 7. Run main:app with uvicorn when the container launches
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5000"]
