--- a/PA_Flutter/pubspec.yaml
+++ b/PA_Flutter/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   googleapis_auth: ^1.6.0
   url_launcher: ^6.3.1
   hotkey_manager: 0.2.3
+  llama_cpp_dart: ^0.1.0 # For local LLM inference
 
   # Finance Module Additions
   plaid_flutter: ^3.0.0
